# rust-ddns

./: .gitignore  Cargo.toml  LICENSE  README.md  ddnsd  install.ps1  install.sh  run_with_file_logging.sh  uninstall.ps1  uninstall.sh
docs/specs/: FR0001-secure-credential-storage.md  FR0002-cross-platform-install.md  FR0003-install-subcommands.md  FR0004-squarespace-migration.md  FR0005-namecheap-support.md
src/: api_client.rs  arg_parser.rs  error.rs  installer.rs  ip_checker.rs  logging.rs  main.rs  time_tools.rs
