[package]
name = "domains"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
reqwest = "0.11.18"
tokio = { version = "1", features = ["full"] }
yaml-rust = "0.4.5"
clap = { version = "4.2.5", features = ["derive"] }
